AC_INIT(src/eio_api_f.cpp)

dnl the fortran stuff needs to be pretty new to work on SunOS
dnl AC_PREREQ(2.59c)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(eio, 5.5.0)

AC_SYS_LARGEFILE

sinclude(acx_elmer.m4)
ACX_DEBUG

AC_PROG_CC([xlc pathcc icc cc gcc])
AC_PROG_CXX([xlC pathCC icc CC g++])
AC_PROG_FC([gfortran xlf90 pathf90 ifort ifc f90 g95])

AM_MAINTAINER_MODE

AC_PROG_RANLIB

dnl It is important to do this before *_WRAPPERS, because the ldflags might be different for 32 and 64 bits
ACX_CHECK_B64FLAGS

AC_FC_WRAPPERS
AC_FC_DUMMY_MAIN

ACX_FC_CHAR_MANGLING 

ACX_SHLIB_STUFF
ACX_PLATFORM_DEFS

AC_STDC_HEADERS

ACX_LANG_COMPILER_MS

AM_CONDITIONAL(USE_SHARED_LIBS, test "$acx_platform_def" = "WIN32")

AC_CONFIG_HEADER(config.h) 

AC_OUTPUT([
Makefile
include/Makefile
src/Makefile])
