AC_INIT(src/elmerparam.c)
AC_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(elmerparam, 1.0)

#sinclude(acx_elmer.m4)
#ACX_HOST
#ACX_PLATFORM_DEFS
#ACX_DEBUG
#ACX_PROG_AR

#ACX_LANG_COMPILER_MS

AC_PROG_RANLIB
AC_PROG_CC([xlc pathcc icc cc gcc])
AC_PROG_FC([xlf90 pathf90 ifort f95 gfortran g95])
AC_FC_WRAPPERS
ee_FC_MODSEARCH_OPT

ee_FC_MODFILE
AM_CONDITIONAL(UPPERCASEMODS, test $modfilename = "MODULENAME.mod")
ee_IARGC_DECL
echo iargc_decl = $iargc_decl

ACX_CHECK_B64FLAGS

AC_ARG_ENABLE(matc, [  --disable-matc           Disable the MATC library ],
        [
        AC_DEFINE(DISABLE_MATC, [yes], [MATC support])
        matc=no
        ],
        matc=yes
)
AM_CONDITIONAL(MATC, test $matc = yes)

AC_CHECK_PROG(have_r, R, yes, no)
AM_CONDITIONAL(R, test $have_r = yes)

AC_CHECK_PROG(have_matlab, matlab, yes, no)
AM_CONDITIONAL(MATLAB, test $have_matlab = yes)
if  test $have_matlab = yes; then
        ee_MEXEXT
fi

#AC_REPLACE_FUNCS(strncasecmp, AC_DEFINE(HAVE_STRNCASECMP))

AC_OUTPUT([
Makefile
src/Makefile
src/iargc_decl.inc
src/R/elmerparam/src/Makevars
src/R/Makefile
src/matlab/Makefile
test/Makefile
test/make.inc
])
