FIND_FILE(GPL2_FILE GPL-2.txt PATHS ${CMAKE_CURRENT_SOURCE_DIR})
FIND_FILE(LGPL2.1_FILE LGPL-2.1.txt PATHS ${CMAKE_CURRENT_SOURCE_DIR})
FIND_FILE(LICENSES_ALL LICENSES PATHS ${CMAKE_CURRENT_SOURCE_DIR})
INSTALL(FILES ${GPL2_FILE} ${LGPL2.1_FILE} ${LICENSES_ALL}
  DESTINATION "share/elmersolver/license_texts")
