AC_INIT(src/blas/dgemm.f)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(mathlibs, 1.0.0)

AM_MAINTAINER_MODE

sinclude(acx_elmer.m4)
ACX_DEBUG

AC_PROG_RANLIB

AC_PROG_F77([gfortran xlf pathf90 ifort f77 g77])

ACX_CHECK_B64FLAGS

ACX_FC_INCLUDE_MODULE_FLAG

sinclude(acx_mpi.m4)
ACX_MPI

if test "$MPI_INCLUDE_DIR" != ""; then
   FFLAGS="$FFLAGS -I$MPI_INCLUDE_DIR"
fi

if test "$MPI_INCLUDE" != ""; then
   FFLAGS="$FFLAGS $MPI_INCLUDE"
fi

AM_CONDITIONAL(USE_MPI, test "$acx_mpi_ok" = "yes")
AM_CONDITIONAL(USE_LOCAL_MPIF_H, test "$acx_mpif_h_found" = "no")

AC_OUTPUT([
Makefile
src/Makefile
src/blas/Makefile
src/lapack/Makefile
src/arpack/Makefile
src/parpack/Makefile
]
)

AC_MSG_RESULT([
BLAS, LAPACK, ARPACK and PARPACK build options:

Use environment variables F77 and FFLAGS to 
change these.

Compiler:
  Fortran compiler          $F77
  Fortran flags             $FFLAGS
  MPI (compile parpack)     $acx_mpi_ok

]);
