AC_INIT(src/Mesh.cpp)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(meshgen2d, 5.0.0)

sinclude(acx_elmer.m4)
ACX_DEBUG
ACX_MEANING
ACX_HOST
ACX_PLATFORM_DEFS

AC_CHECK_LIB(stdc++, main)

AC_LANG_COMPILER
AC_PROG_CXX

AM_MAINTAINER_MODE

# ACX_CHECK_B64FLAGS

AC_CONFIG_HEADER(config.h) 

AC_OUTPUT([
Makefile
src/include/Makefile
src/Makefile
])
