PROJECT(ElmerPost Fortran C CXX)
cmake_minimum_required(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules "${PROJECT_SOURCE_DIR}/cmake/Modules" )

SET(ELMER_POST_DATADIR "share/elmerpost")

ADD_DEFINITIONS(-DUSE_ISO_C_BINDINGS)
include(CheckIncludeFiles)
CHECK_INCLUDE_FILES(strings.h HAVE_STRINGS_H)
CHECK_INCLUDE_FILES(string.h HAVE_STRING_H)

SET(TCL_VERSION_STRING 8.5)
SET(TCLSH_VERSION_STRING 8.5)
FIND_PACKAGE(TCL REQUIRED VERSION 8.5)
FIND_PACKAGE(OpenGL REQUIRED)
SET(USE_INTERP_RESULT TRUE)

MESSAGE(STATUS "OPENGL_LIBRARIES = ${OPENGL_LIBRARIES}")
MESSAGE(STATUS "TCL_LIBRARY = ${TCL_LIBRARY}")
MESSAGE(STATUS "TCL_INCLUDE_PATH = ${TCL_INCLUDE_PATH}")

SET(FC_STDCALLBULL " " )
SET(STDCALLBULL TRUE)
#cmakedefine STDCALLBULL @FC_STDCALLBULL@
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../matc/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

add_subdirectory(matc)
add_subdirectory(src)

INSTALL(DIRECTORY "doc/" DESTINATION "${ELMER_POST_DATADIR}/help" COMPONENT ElmerPost)


########### install files ###############




#original Makefile.am contents follow:

#SUBDIRS=src
